--- a/package.json
+++ b/package.json
@@ -11,73 +11,22 @@
       "name": "Raynos"
     }
   ],
-  "dependencies": {
-    "bufrw": "0.9.27",
-    "chalk": "1.0.0",
-    "collect-parallel": "1.0.1",
-    "debug-logtron": "5.0.0",
-    "deep-extend": "0.3.2",
-    "error": "6.0.0",
-    "get-port": "1.0.0",
-    "git-repo-info": "1.0.4",
-    "heapdump": "0.3.5",
-    "inherits": "2.0.1",
-    "is-empty-object": "1.0.0",
-    "json-stringify-safe": "5.0.0",
-    "larch": "1.0.1",
-    "leaked-handles": "5.1.0",
-    "logtron": "8.12.1",
-    "minimist": "1.1.1",
-    "mkdirp": "0.5.0",
-    "null-logtron": "2.2.0",
-    "process": "0.10.0",
-    "process-reporter": "2.1.2",
-    "raynos-replr": "0.2.5-port-0-support",
-    "ready-signal": "1.2.0",
-    "ringpop": "10.15.0",
-    "run-parallel": "1.0.0",
-    "run-series": "1.1.2",
-    "safe-json-parse": "4.0.0",
-    "static-config": "2.1.0",
-    "tape-cluster": "2.0.1",
-    "tchannel": "^3.8.2",
-    "uber-statsd-client": "1.4.0",
-    "uncaught-exception": "6.0.2",
-    "xtend": "4.0.0"
-  },
-  "devDependencies": {
-    "body": "^5.1.0",
-    "eslint": "0.23.0",
-    "eslint-config-perf-standard": "1.0.0",
-    "format-stack": "4.1.0",
-    "istanbul": "^0.3.17",
-    "kafka-logger": "^6.1.0",
-    "ldjson-stream": "1.2.1",
-    "metrics": "^0.1.9",
-    "opn": "^0.1.2",
-    "rezult": "^1.0.0",
-    "sentry-logger": "^3.0.3",
-    "tape": "^4.2.2",
-    "time-mock": "^0.1.2",
-    "uber-licence": "1.5.1"
-  },
   "licenses": [],
   "scripts": {
-    "add-licence": "uber-licence",
     "check-benchmark": "node benchmarks --relay -- --relay -r 10000 -p 1000 --skipPing",
     "check-files": "bash ./scripts/verify_included.sh",
-    "check-licence": "uber-licence --dry",
     "check-cover": "istanbul check-coverage || echo coverage failed",
     "check-ls": "npm ls --loglevel=http --parseable 1>/dev/null && echo '# npm is in a good state'",
     "cover": "npm run check-files && npm run test-cover -s && npm run check-cover -s",
-    "lint": "eslint $(git ls-files | grep '.js$') && echo '# linter passed'",
-    "shrinkwrap": "node bin/shrinkwrap.js --dev",
+    "shrinkwrap": "echo skipping shrinkwrap\n",
     "travis": "npm run test",
-    "test": "npm run check-licence && npm run check-ls -s && npm run lint -s && npm run cover && npm run check-benchmark -s",
-    "test-ci": "npm run check-licence && npm run lint -s && npm run cover",
+    "test": "npm run check-ls -s && standard --fix && npm run cover && npm run check-benchmark -s",
     "test-repeat": "NODE_DEBUG=autobahn node test/index.js | FORCE_COLOR=1 tap-spec; while [ $? -eq 0 ]; do NODE_DEBUG=autobahn node test/index.js | FORCE_COLOR=1 tap-spec; done;",
     "test-cover": "istanbul cover test/index.js",
-    "view-cover": "opn ./coverage/index.html"
+    "view-cover": "opn ./coverage/index.html",
+    "dev": "npm-run-all -l -p dev:*",
+    "dev:0": "make run-local-0",
+    "dev:1": "make run-local-1"
   },
   "engines": {
     "node": "0.10.x"
@@ -86,5 +35,58 @@
     "ignore": [
       "dashboards/*.js"
     ]
+  },
+  "dependencies": {
+    "bufrw": "1.2.1",
+    "chalk": "2.4.2",
+    "collect-parallel": "1.0.1",
+    "debug-logtron": "5.2.0",
+    "deep-extend": "0.6.0",
+    "error": "7.0.2",
+    "get-port": "5.0.0",
+    "git-repo-info": "2.1.0",
+    "heapdump": "0.3.14",
+    "inherits": "2.0.3",
+    "is-empty-object": "1.1.1",
+    "json-stringify-safe": "5.0.1",
+    "larch": "1.5.0",
+    "leaked-handles": "5.2.0",
+    "logtron": "9.1.0",
+    "minimist": "1.2.0",
+    "mkdirp": "0.5.1",
+    "null-logtron": "2.2.0",
+    "process": "0.11.10",
+    "process-reporter": "2.5.0",
+    "raynos-replr": "0.2.5-port-0-support",
+    "ready-signal": "1.3.0",
+    "ringpop": "10.21.0",
+    "run-parallel": "1.1.9",
+    "run-series": "1.1.8",
+    "safe-json-parse": "4.0.0",
+    "static-config": "2.2.0",
+    "tape-cluster": "3.1.0",
+    "tchannel": "3.9.13",
+    "tcurl": "^4.23.1",
+    "uber-statsd-client": "1.7.3",
+    "uncaught-exception": "6.0.2",
+    "xtend": "4.0.1"
+  },
+  "devDependencies": {
+    "body": "5.1.0",
+    "eslint": "1.8.0",
+    "eslint-config-perf-standard": "2.1.1",
+    "eslint-plugin-perf-standard": "1.0.3",
+    "format-stack": "4.1.1",
+    "istanbul": "0.4.5",
+    "kafka-logger": "7.1.0",
+    "ldjson-stream": "1.2.1",
+    "metrics": "0.1.21",
+    "npm-run-all": "^4.1.5",
+    "opn": "6.0.0",
+    "rezult": "1.1.0",
+    "sentry-logger": "3.0.9",
+    "standard": "12.0.1",
+    "tape": "4.10.2",
+    "time-mock": "0.1.4"
   }
 }
